<resources>
    <string name="app_name">Book Shop</string>

    <string name="label_bienvenida">Bienvenido a Book Shop</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Welcome to bookshop</string>

    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="exit">Exit</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="anonymous_sign_in">Anonymous Sign In</string>
    <string name="info_login">Introduce usuario y contraseña</string>
    <string name="status_logged">Logged</string>
    <string name="field_required">Field required.</string>
    <string name="logKo">Usuario y/o contraseña erroneo.</string>


    <string name="titulo">Título:</string>
    <string name="nulltitulo">Sin título</string>
    <string name="autor">Autor:</string>
    <string name="nullautor">Sin autor</string>
    <string name="descripcion">Descripcion:</string>
    <string name="nulldescripcion">Sin descripcion</string>
    <string name="buscar">Buscar</string>
    <string name="logout">Desconectar</string>
    <string name="btnPedir">Pedir</string>
    <string name="btnMasDetalles">Más detalles</string>

    <string name="pedidoCorrecto">Pedido registrado correctamente</string>
    <string name="errorCantidadEjemplares">Error en la cantidad de ejemplares</string>
    <string name="noLibrosEncontrados">No se encuentran libros con estas características</string>

    <string name="tituloDialogEjemplares">Seleccione número de ejemplares a pedir</string>
    <string name="btnDialogAceptar">Realizar pedido</string>
    <string name="btnDialogCancelar">Cancelar</string>

    <string name="btnAniadirQueja">Añadir foto relamación</string>
    <string name="btnModificarQueja">Modificar foto</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="labelFechaRegistro">Registrado:</string>
    <string name="labelFechaRecibido">Recibido:</string>
    <string name="labelEstado">Estado:</string>
    <string name="nullfechaRegistro">Sin fecha registro</string>
    <string name="nullfechaEntrega">Aun no recibido</string>
    <string name="nullEstado">Sin estado</string>
    <string name="verOrder">Ver pedidos</string>
    <string name="errorAlEliminarImagen">Error al eliminar imagen</string>

    <string name="adjutandoImagen">Adjuntando imagen, espere por favor...</string>
    <string name="okrelamacion">Reclamación registrada correctamente</string>

    <string name="pulseDeNuevoExit">Pulse de nuevo para salir</string>




</resources>


