<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.upm.miw.bookshop.MainActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_firebase_lockup"
        android:src="@drawable/firebase_lockup_400" />

    <TextView
        android:id="@+id/titleAnonymous"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="226dp"
        android:text="@string/label_bienvenida"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/titleAnonymous"
        android:layout_marginBottom="25dp"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/buttonAnonymousSignOut"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/icon"
        android:layout_alignTop="@+id/buttonSignIn"
        android:text="@string/sign_out" />

    <TextView
        android:id="@+id/titleLinking"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/titleAnonymous"
        android:layout_marginTop="286dp"
        android:text="@string/info_login" />

    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/titleAnonymous"
        android:layout_marginBottom="292dp"
        android:hint="@string/hint_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/titleAnonymous"
        android:layout_marginBottom="234dp"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />


</RelativeLayout>