<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="290dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bookPreviewOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            app:srcCompat="@mipmap/ic_miw_launcher" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelTituloOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/titulo" />

            <TextView
                android:id="@+id/tituloOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelAutorOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/autor" />

            <TextView
                android:id="@+id/autorOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelDescripcionOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/descripcion" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/descripcionOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:maxLines="5"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelFechaRegistro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/labelFechaRegistro" />

            <TextView
                android:id="@+id/fecha_registro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelFechaRecibido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/labelFechaRecibido" />

            <TextView
                android:id="@+id/fecha_recibido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelEstado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/labelEstado" />

            <TextView
                android:id="@+id/estado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.20"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAniadirQueja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnAniadirQueja" />

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnEliminar" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>