<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bookPreview"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_gravity="top"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@mipmap/ic_miw_launcher" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelTitulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textColor="@color/colorFont"
                android:text="@string/titulo" />

            <TextView
                android:id="@+id/titulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textColor="@color/colorFont"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelAutor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textColor="@color/colorFont"
                android:text="@string/autor" />

            <TextView
                android:id="@+id/autor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textColor="@color/colorFont"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelDescripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorFont"
                android:text="@string/descripcion" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.50"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/descripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:maxLines="5"
                android:textColor="@color/colorFont"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.20"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPedir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnPedir" />

            <Button
                android:id="@+id/btnMasDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnMasDetalles" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>