<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.20"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.30"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/filtroNombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.20"
                    android:textColor="@color/colorFont"
                    android:text="@string/titulo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.70"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorFont"
                    android:textColorHint="@color/textColorHint"
                    android:inputType="textPersonName" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.30"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/filtroPuntuacion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.20"
                    android:textColor="@color/colorFont"
                    android:text="@string/autor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.70"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editAutor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorFont"
                    android:textColorHint="@color/textColorHint"
                    android:inputType="textPersonName" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/listaLibros"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.70">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/logout" />

        <Button
            android:id="@+id/buscarButton"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/buscar" />


    </LinearLayout>

</LinearLayout>